overlays/staging/config/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  name: drova-api
  namespace: drova-staging
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "staging.drova.timourhomelab.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ws/chat
      backendRefs:
        - name: chat-service
          port: 8084
    - matches:
        - path:
            type: PathPrefix
            value: /v1
        - path:
            type: PathPrefix
            value: /trip
        - path:
            type: PathPrefix
            value: /trips
        - path:
            type: PathPrefix
            value: /drivers
        - path:
            type: PathPrefix
            value: /ws/drivers
        - path:
            type: PathPrefix
            value: /ws/riders
        - path:
            type: PathPrefix
            value: /webhook
        - path:
            type: Exact
            value: /health
        - path:
            type: Exact
            value: /readyz
        - path:
            type: Exact
            value: /config
      backendRefs:
        - name: api-gateway-stable
          port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  name: drova-frontend
  namespace: drova-staging
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "staging.drova.timourhomelab.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 8080
